RESOLVED FIXED 264251
LocalSampleBufferDisplayLayer does not need to recreate its AVSampleBufferDisplayLayer
https://bugs.webkit.org/show_bug.cgi?id=264251
Summary LocalSampleBufferDisplayLayer does not need to recreate its AVSampleBufferDis...
youenn fablet
Reported 2023-11-06 06:36:32 PST
LocalSampleBufferDisplayLayer does not need to recreate its AVSampleBufferDisplayLayer
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-06 06:37:24 PST
youenn fablet
Comment 2 2023-11-06 06:44:17 PST
EWS
Comment 3 2023-11-09 00:03:13 PST
Committed 270426@main (f514c3152b16): <https://commits.webkit.org/270426@main> Reviewed commits have been landed. Closing PR #20033 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.