LocalSampleBufferDisplayLayer does not need to recreate its AVSampleBufferDisplayLayer https://bugs.webkit.org/show_bug.cgi?id=264251 rdar://117996669

Reviewed by Eric Carlson.

We did a workaround to speed up the rendering of MediaStreamTrack in case of size change.
The cost was a small flash as we were replacing one AVSBDL by another using replaceLayer.
We are removing this workaround which removes the small flash.
We still have issues with the temporary resizing that happens when the size changes.
This should be fixed as a follow-up.

* Source/WebCore/platform/graphics/avfoundation/objc/LocalSampleBufferDisplayLayer.h:
* Source/WebCore/platform/graphics/avfoundation/objc/LocalSampleBufferDisplayLayer.mm:
(WebCore::LocalSampleBufferDisplayLayer::initialize):
(WebCore::LocalSampleBufferDisplayLayer::updateSampleLayerBoundsAndPosition):
(WebCore::LocalSampleBufferDisplayLayer::flush):
(WebCore::LocalSampleBufferDisplayLayer::flushAndRemoveImage):
(WebCore::LocalSampleBufferDisplayLayer::enqueueVideoFrame):
(WebCore::LocalSampleBufferDisplayLayer::enqueueBufferInternal):
(WebCore::LocalSampleBufferDisplayLayer::clearVideoFrames):
(WebCore::LocalSampleBufferDisplayLayer::requestNotificationWhenReadyForVideoData):

Canonical link: https://commits.webkit.org/270426@main